troubleshooting git issues

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The company would like to create a new movie studio for original video content, but we don't have any experience with making movies.  Here, we want to explore what types of films are performing best at the box office currently in order to make recommendations about what type of films to create in our new studio."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -22,7 +24,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We are working with two datasets provided by IMDB and The Numbers.  The data includes information about movies and their genres, ratings, directors and writers, domestic and internatinal gross revenue, and budget."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,9 +36,416 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('tn.movie_budgets.csv.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5782 entries, 0 to 5781\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column             Non-Null Count  Dtype \n",
+      "---  ------             --------------  ----- \n",
+      " 0   id                 5782 non-null   int64 \n",
+      " 1   release_date       5782 non-null   object\n",
+      " 2   movie              5782 non-null   object\n",
+      " 3   production_budget  5782 non-null   object\n",
+      " 4   domestic_gross     5782 non-null   object\n",
+      " 5   worldwide_gross    5782 non-null   object\n",
+      "dtypes: int64(1), object(5)\n",
+      "memory usage: 271.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>$425,000,000</td>\n",
+       "      <td>$760,507,625</td>\n",
+       "      <td>$2,776,345,279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>$410,600,000</td>\n",
+       "      <td>$241,063,875</td>\n",
+       "      <td>$1,045,663,875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>$350,000,000</td>\n",
+       "      <td>$42,762,350</td>\n",
+       "      <td>$149,762,350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>$330,600,000</td>\n",
+       "      <td>$459,005,868</td>\n",
+       "      <td>$1,403,013,963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>$317,000,000</td>\n",
+       "      <td>$620,181,382</td>\n",
+       "      <td>$1,316,721,747</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  release_date                                        movie  \\\n",
+       "0   1  Dec 18, 2009                                       Avatar   \n",
+       "1   2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2   3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3   4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4   5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "\n",
+       "  production_budget domestic_gross worldwide_gross  \n",
+       "0      $425,000,000   $760,507,625  $2,776,345,279  \n",
+       "1      $410,600,000   $241,063,875  $1,045,663,875  \n",
+       "2      $350,000,000    $42,762,350    $149,762,350  \n",
+       "3      $330,600,000   $459,005,868  $1,403,013,963  \n",
+       "4      $317,000,000   $620,181,382  $1,316,721,747  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Changing monetary column values from string to integer in order to perform mathematical operations..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_without_symbols = ['production_budget', 'domestic_gross', 'worldwide_gross']\n",
+    "\n",
+    "for col in columns_without_symbols:\n",
+    "    df[col] = df[col].str.replace('$', '', regex=False)\n",
+    "    df[col] = df[col].str.replace(',', '', regex=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>425000000</td>\n",
+       "      <td>760507625</td>\n",
+       "      <td>2776345279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>410600000</td>\n",
+       "      <td>241063875</td>\n",
+       "      <td>1045663875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>350000000</td>\n",
+       "      <td>42762350</td>\n",
+       "      <td>149762350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>330600000</td>\n",
+       "      <td>459005868</td>\n",
+       "      <td>1403013963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>317000000</td>\n",
+       "      <td>620181382</td>\n",
+       "      <td>1316721747</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  release_date                                        movie  \\\n",
+       "0   1  Dec 18, 2009                                       Avatar   \n",
+       "1   2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2   3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3   4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4   5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "\n",
+       "  production_budget domestic_gross worldwide_gross  \n",
+       "0         425000000      760507625      2776345279  \n",
+       "1         410600000      241063875      1045663875  \n",
+       "2         350000000       42762350       149762350  \n",
+       "3         330600000      459005868      1403013963  \n",
+       "4         317000000      620181382      1316721747  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "converted_columns = ['production_budget', 'domestic_gross', 'worldwide_gross']\n",
+    "for col in converted_columns:\n",
+    "    df[col] = pd.to_numeric(df[col], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "      <th>profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>425000000</td>\n",
+       "      <td>760507625</td>\n",
+       "      <td>2776345279</td>\n",
+       "      <td>3111852904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>410600000</td>\n",
+       "      <td>241063875</td>\n",
+       "      <td>1045663875</td>\n",
+       "      <td>876127750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>350000000</td>\n",
+       "      <td>42762350</td>\n",
+       "      <td>149762350</td>\n",
+       "      <td>-157475300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>330600000</td>\n",
+       "      <td>459005868</td>\n",
+       "      <td>1403013963</td>\n",
+       "      <td>1531419831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>317000000</td>\n",
+       "      <td>620181382</td>\n",
+       "      <td>1316721747</td>\n",
+       "      <td>1619903129</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  release_date                                        movie  \\\n",
+       "0   1  Dec 18, 2009                                       Avatar   \n",
+       "1   2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2   3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3   4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4   5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "\n",
+       "   production_budget  domestic_gross  worldwide_gross      profit  \n",
+       "0          425000000       760507625       2776345279  3111852904  \n",
+       "1          410600000       241063875       1045663875   876127750  \n",
+       "2          350000000        42762350        149762350  -157475300  \n",
+       "3          330600000       459005868       1403013963  1531419831  \n",
+       "4          317000000       620181382       1316721747  1619903129  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['profit'] = (df['domestic_gross'] + df['worldwide_gross']) - df['production_budget']\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis"
+   ]
   },
   {
    "cell_type": "code",
@@ -44,11 +455,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# Exploratory Data Analysis"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
