--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -37,18 +37,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "conn = sqlite3.connect('data/im.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('movie_basics',),\n",
+       " ('directors',),\n",
+       " ('known_for',),\n",
+       " ('movie_akas',),\n",
+       " ('movie_ratings',),\n",
+       " ('persons',),\n",
+       " ('principals',),\n",
+       " ('writers',)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute(\"\"\"SELECT name FROM sqlite_master WHERE type = 'table';\"\"\")\n",
+    "table_names = cur.fetchall()\n",
+    "table_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('tn.movie_budgets.csv.gz')"
+    "df = pd.read_csv('data/tn.movie_budgets.csv.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +223,7 @@
        "4      $317,000,000   $620,181,382  $1,316,721,747  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,6 +231,13 @@
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -193,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +359,7 @@
        "4         317000000      620181382      1316721747  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,8 +369,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I'm going to calculate profit and ROI from the values provided above, so that I can use ROI as a measure of movie success moving forward."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -430,13 +492,142 @@
        "4          317000000       620181382       1316721747  1619903129  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['profit'] = (df['domestic_gross'] + df['worldwide_gross']) - df['production_budget']\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we report ROI as a percentage, so we multiply by 100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "      <th>profit</th>\n",
+       "      <th>ROI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>425000000</td>\n",
+       "      <td>760507625</td>\n",
+       "      <td>2776345279</td>\n",
+       "      <td>3111852904</td>\n",
+       "      <td>732.200683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>410600000</td>\n",
+       "      <td>241063875</td>\n",
+       "      <td>1045663875</td>\n",
+       "      <td>876127750</td>\n",
+       "      <td>213.377435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>350000000</td>\n",
+       "      <td>42762350</td>\n",
+       "      <td>149762350</td>\n",
+       "      <td>-157475300</td>\n",
+       "      <td>-44.992943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>330600000</td>\n",
+       "      <td>459005868</td>\n",
+       "      <td>1403013963</td>\n",
+       "      <td>1531419831</td>\n",
+       "      <td>463.224389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>317000000</td>\n",
+       "      <td>620181382</td>\n",
+       "      <td>1316721747</td>\n",
+       "      <td>1619903129</td>\n",
+       "      <td>511.010451</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  release_date                                        movie  \\\n",
+       "0   1  Dec 18, 2009                                       Avatar   \n",
+       "1   2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2   3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3   4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4   5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "\n",
+       "   production_budget  domestic_gross  worldwide_gross      profit         ROI  \n",
+       "0          425000000       760507625       2776345279  3111852904  732.200683  \n",
+       "1          410600000       241063875       1045663875   876127750  213.377435  \n",
+       "2          350000000        42762350        149762350  -157475300  -44.992943  \n",
+       "3          330600000       459005868       1403013963  1531419831  463.224389  \n",
+       "4          317000000       620181382       1316721747  1619903129  511.010451  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ROI'] = (df['profit'] / df['production_budget']) * 100\n",
     "df.head()"
    ]
   },
